styles/main.css
/* IMPORT FONTS */
@font-face {
    font-family: 'intro_head_rbase';
    src: url('../fonts/introheadr-base-webfont.woff2') format('woff2'),
         url('../fonts/introheadr-base-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'intro_rust_gbase';
    src: url('../fonts/introrustg-base2line-webfont.woff2') format('woff2'),
         url('../fonts/introrustg-base2line-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

html, body {
	height: 100%;
	font-family: 'Open Sans', sans-serif;
}

.slideshowBkg {
	height: 100%;
}

h3 {
	font-family: 'intro_head_rbase';
}


@media (max-width: 768px) {
	header {
		background-color: #fff;
		background-image: url(../images/logo-header.png);
		background-repeat: no-repeat;
		background-position: 15px 10px;
		width: 100%;
		height: 115px;
		line-height: 115px;
		margin-top: 30px;
		padding:45px 35px;
	}

	nav {
		float: right;
		background-color:#292929;
		color: #FFF;
		position: fixed;
		z-index: 5;
		width: 100%;
		height: 100%;
		bottom:-1000px;
		left:0;
		text-align: center;
	}

	#navClose {
		font-size: 30px;
		position: absolute;
		right:30px;
		top:30px;
	}

	nav ul {
		padding: 0;
	}

	nav ul li {
		text-align: center;
		font-size:24px;
	}

	nav ul li a, nav ul li a:hover {
		color: #FFF;
		text-decoration: none;
	}

	nav ul li a#franchise {
		color:#FF8500; 
	}

	nav img {
		margin-top:75px;
		margin-bottom: 30px;
	}

	.navOpen {
		bottom:0
	}


	#menuButton {
		width: 40px;
		height: 15px;
		float: right;
	}

	#menuButton div {
		width: 100%;
		height: 33%;
		background-color: #000000;
	}

	#menuButton div + div {
		margin: 5px 0;
	}

		footer {
		background-color:#262626;
		color: #FFF;
		width: 100%;
		text-align: center;
	}

	footer a {
		color: #FFF;
		text-decoration: none;
	}

	footer a:hover {
		color:#FFF;
		text-decoration: underline;
	}

	footer ul {
		padding: 0;
		list-style: none;
	}

	.listRestaurants, .socialNetworks, .newsletterForm {
		margin-top: 50px;
	}

	.newsletterForm {
		text-align: center;
	}

	.newsletterForm input {
		border-radius: 0;
	}

	.btn-orange {
		background-color: #FF8500;
		border-radius: 0;
	}

	.socialNetworks ul li, .socialNetworks ul li a {
		display: inline-block;
		width: 64px;
		height: 64px;
	}

	.socialNetworks ul li::nth-child(2) {
		margin: 0 10px;
	}

	#facebook {
		background-image: url(../images/facebook.png);
	}

	#twitter {
		background-image: url(../images/twitter.png);
	}

	#instagram {
		background-image: url(../images/instagram.png);
	}

	.footerLinks li {
		display: inline;
	}
}

@media (min-width: 768px) and (max-width: 992px) {

}

@media (min-width: 992px) and (max-width: 1200px) {

}

@media (min-width: 1200px) {
	/* HEADER ET NAVIGATION */

	header {
		background-color: #fff;
		background-image: url(../images/logo-header.png);
		background-repeat: no-repeat;
		background-position: 15px 10px;
		width: 100%;
		height: 115px;
		line-height: 115px;
		margin-top: 30px;
	}

	nav {
		float: right;
		text-align: center;
		width:80%;
	}

	#navClose {
		display: none;
	}

	nav ul {
		padding: 0;
	}

	nav ul li {
		text-align: center;
		font-size:18px;
		display: inline-block;
		width: 33%
	}

	nav ul li a, nav ul li a:hover {
		color: #000;
		text-decoration: none;
	}

	nav ul li a#franchise {
		color:#FF8500; 
	}

	nav img {
		display: none;
	}

	.navOpen {
		bottom:0
	}


	#menuButton {
		display: none;
	}

	#menuButton div + div {
		margin: 5px 0;
	}



	footer {
		background-color:#262626;
		color: #FFF;
		width: 100%;
		text-align: center;
	}

	footer h3 {
		margin-bottom: 30px;
	}

	footer ul {
		padding: 0;
		list-style: none;
	}

	.listRestaurants, .socialNetworks, .newsletterForm {
		vertical-align: top;
	}

	.newsletterForm {
		text-align: center;
	}

	.newsletterForm input {
		border-radius: 0;
		width: 80%;
		float: left;
	}

	.btn-orange {
		background-color: #FF8500;
		border-radius: 0;
	}

	.socialNetworks ul li, .socialNetworks ul li a {
		display: inline-block;
		width: 64px;
		height: 64px;
	}

	.socialNetworks ul li::nth-child(2) {
		margin: 0 10px;
	}

	#facebook {
		background-image: url(../images/facebook.png);
	}

	#twitter {
		background-image: url(../images/twitter.png);
	}

	#instagram {
		background-image: url(../images/instagram.png);
	}

	.footerLinks li {
		display: inline;
	}

		footer a {
		color: #FFF;
		text-decoration: none;
	}

	footer a:hover {
		color:#FFF;
		text-decoration: underline;
	}
}

/*JS*/

.smaller {
	height: 65px;
	position: fixed;
	margin-top:0;
	left:0;
	top:0;
	line-height: 65px;
	background-position: 0 -15px;
}

